# sharetty

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: release.yml
front/: package-lock.json  package.json  vite.config.ts
front/src/: main.ts  overlay.ts  style.css
src/: cli.rs  client.rs  handlers.rs  main.rs  protocol.rs  pty.rs  server.rs  websocket.rs
static/: index.html
static/css/: sharetty.css
static/js/: sharetty.js
tests/: integration_test.rs  quic_reverse_connection.rs  reverse_file_transfer.rs
