[package]
name = "sharetty"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
rust-embed = "8.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mime_guess = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6.8", features = ["trace", "fs"] }
rustls = { version = "0.23.36", features = ["ring"] }
rustls-pemfile = "2.2.0"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
quinn = "0.11.9"
h3 = "0.0.8"
h3-quinn = "0.0.10"
futures-util = "0.3.31"
http-body-util = "0.1.3"
bytes = "1.11.1"
http = "1.4.0"
tower = "0.5.3"
rcgen = "0.14.7"
rand = "0.10.0"
base64 = "0.22.1"
tokio-tungstenite = { version = "0.24.0", features = ["rustls-tls-native-roots"] }
dashmap = "6.0"
url = "2"
tracing-appender = "0.2.4"

[target.'cfg(unix)'.dependencies]
pty-process = { version = "0.4", features = ["async"] }

[target.'cfg(windows)'.dependencies]
winpty-rs = "0.3.3"

[dev-dependencies]
